--- a/apps/docs/docs/getting-started/support.mdx
+++ b/apps/docs/docs/getting-started/support.mdx
@@ -1,6 +1,6 @@
 ---
 title: Support and contribute to development
-sidebar: 
+sidebar:
   label: Support & contribution
 ---
 
@@ -10,7 +10,17 @@ Kilpi is free to use and will always remain so. I am committed to maintaining Ki
 
 You can help keep the coffee flowing to receive active maintenance and new features by supporting me for the small price of a coffee. All contributions are greatly appreciated and help keep Kilpi alive and evolving.
 
-<a href="https://www.buymeacoffee.com/nevavuoriji" target="_blank" style="margin-block:16px;display:inline-block;"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></img></a>
+<a
+  href="https://www.buymeacoffee.com/nevavuoriji"
+  target="_blank"
+  style="margin-block:16px;display:inline-block;"
+>
+  <img
+    src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png"
+    alt="Buy Me A Coffee"
+    style="height: 60px !important;width: 217px !important;"
+  ></img>
+</a>
 
 **Using Kilpi at your company?** Consider [becoming a sponsor](https://www.jussinevavuori.com/#contact).
 
@@ -23,17 +33,6 @@ All feedback, feature requests, issues and bug reports are welcome. [Create a ne
 Kilpi is open-source. This means you are free to contribute. [Clone the repository and create your first pull request on Github](https://github.com/Jussinevavuori/kilpi). Even opening issues and feature requests is a great way to contribute.
 
 <Aside>
-Instructions on contributing to Kilpi are coming soon. For now, you can clone the repository and start creating pull requests.
+  Instructions on contributing to Kilpi are coming soon. For now, you can clone the repository and
+  start creating pull requests.
 </Aside>
-
-Help is especially needed in **improving the documentation** and **adapting Kilpi to other frameworks** (either by providing installation guides, new plugins for components and automatic scoping or example projects). These frameworks include but are not limited to:
-
-- Tanstack Start
-- Vue and Nuxt
-- Svelte and SvelteKit
-- Solid and SolidStart 
-- Angular, Angular SSR and Analog
-- Astro
-- Fastify
-
-And many others.
