--- a/apps/docs/docs/concepts/subject.mdx
+++ b/apps/docs/docs/concepts/subject.mdx
@@ -4,125 +4,134 @@ sidebar:
   order: 3
 ---
 
-**The subject** represents your **user** or other actor and their permissions, memberships or similar. The subject allows you to wrap any authentication provider and pass it to Kilpi for evaluating policies. The term "user" can be used interchangeably with the "subject".
+**The subject** represents the current **user**† as well as any of their authorization-related data, such as permissions and memberships.
 
-### Example subject
+The current user is provided using the **`getSubject` adapter** to allow getting the subject from any system or authentication provider.
+
+Kilpi calls `getSubject` for you as **authentication** always occurs before **authorization**. This removes unnecessary and duplicated authenticatin logic from your code.
+
+<Aside>
+  †**Subject ≈ user**, however the term **subject** is more commonly used in authorization systems,
+  as it may also refer to e.g. external systems, applications or AI agents, which may access your
+  application.
+</Aside>
+
+## Defining a `getSubject` adapter
+
+Implement your `getSubject` adapter by passing it to `createKilpi`. It should call your authentication system or provider and return any value that represents the current subject or e.g. `null` if there is no authenticated subject.
 
 ```ts
-// src/kilpi/subject.ts
-export type Subject = { id: string };
+export const Kilpi = createKilpi({
+  async getSubject() {
+    const user = await myAuthenticationProvider.getCurrentUser();
+    if (!user) return null;
+    return { id: user.id, name: user.name };
+  },
+  // ...
+});
+```
 
-export async function getSubject(): Promise<Subject | null> {
-  const session = await getSession(); // From your auth provider
-  if (!session) return null;
-  return { id: session.id };
-}
+The `subject`'s type is automatically inferred by your `policies`.
+
+<Aside type="tip">
+  You can extract `getSubject` into its own function to infer the `Subject` type. This is especially useful when defining policies in separate objects.
+
+```ts
+async function getSubject() { ... }
+
+export type Subject = Awaited<ReturnType<typeof getSubject>>;
 
 export const Kilpi = createKilpi({ getSubject, ... })
+
 ```
 
----
+</Aside>
 
-### Providing arguments to getSubject
+### Context
 
-Often, to get your current subject, you need access to a **context**, such as the current request. **You can provide data to the `getSubject` function via the current scope** as follows.
+Commonly, your `getSubject` may require additional **context** (e.g. the current `request`).
 
-<Steps>
-<Step>
-  
-#### Accept context in `getSubject`
+<Aside>
+  When accepting the `ctx` parameter, ensure it is made optional with `?` as shown below.
+</Aside>
 
-Define the type of the context parameter in your `getSubject` function. **The parameter must be optional.** The context may contain e.g. the current request or any other data you need to fetch the subject.
-
-```ts {2}
-export async function getSubject(
-  context?: { req: Request }, // Must be optional
-) {
-  if (!context?.req) return null;
-  return await getUserFromRequest(context.req);
-}
-```
-
-</Step>
-<Step>
-
-#### Pass context via scope
-
-Pass the context as the second argument to `Kilpi.runInScope` or `Kilpi.scoped` to make it available in the `getSubject` function. The type is inferred from the `getSubject` function signature.
-
-```ts {4}
-app.use((req, res, next) => {
-  Kilpi.runInScope(
-    async () => await next(),
-    { req }, // Provide context object
-  );
+```ts {2-4}
+export const Kilpi = createKilpi({
+  async getSubject(ctx?: Request) {
+    if (!ctx) return null;
+    const user = await myAuthenticationProvider.getCurrentUser(ctx);
+    if (!user) return null;
+    return { id: user.id, name: user.name };
+  },
+  // ...
 });
 ```
 
-[Read more about the scope](/docs/concepts/scope).
-
-</Step>
-</Steps>
-
-### Provide extra data to policies
-
-In addition to simply fetching the user object as your subject, you may also fetch any additional data, **if it is used in most policies**. This may include e.g. permissions, memberships, subscriptions or any other data that is used in most policies.
+You can then pass this `ctx` object when authorizing using the `authorize()` API.
 
 ```ts
-// subject.ts
-const getSubject = cache(() => {
-  const user = await getUserFromMyAuthProvider();
-  if (!user) return null;
+Kilpi.some.policy.authorize({ ctx: request });
+```
 
-  return Object.assign(user, {
-    permissions: await db.getPermissions(user.id),
-    memberships: await db.getMemberships(user.id),
-    subscription: await db.getSubscription(user.id),
-  });
+### Additional data
+
+Very commonly, your subject has other authorization-related properties not received directly from your authentication provider. These include e.g. permissions, roles, and memberships. It is often practical and efficient to include them in your `getSubject` instead of fetching in policies.
+
+```ts
+export const Kilpi = createKilpi({
+  async getSubject() {
+    const user = await myAuthenticationProvider.getCurrentUser(ctx);
+    if (!user) return null;
+    const memberships = await db.listMembershipsForUser(user);
+    return { ...user, memberships };
+  },
+  // ...
 });
 ```
 
-If you have data that is only used in a few policies, it should either be **fetched in the policy function** (preferred) or be passed down as the object.
+### Performance considerations and caching
 
-### Subject caching
+Kilpi calls `getSubject` for you on every single `authorize()` call. Especially, if your `getSubject` is an expensive or slow function, you should consider caching it for each request.
 
-The subject is automatically cached inside the scope, if one is available. To disable this behavior, you can pass `settings.disableSubjectCaching: true` to `createKilpi`.
+<Aside type="warning">The cache **must not** leak the cached subject to other requests.</Aside>
 
-We recommend caching the subject for performance reasons, either yourself or by allowing Kilpi to cache it for you.
+This can be done in multiple ways, and some plugins (such as [`ReactServerPlugin`](/docs/plugins/react-server-plugin)) even automatically cache the subject.
 
-```ts
-// kilpi.ts
-export const Kilpi = createKilpi({ ...,
-  settings: { disableSubjectCaching: true, },
-})
-```
+<Collapsible title="Example of subject caching">
 
----
-
-## Motivation for the subject pattern
-
-### 1. Reduce boilerplate
-
-By automatically providing the subject while evaluating policies, the caller does not have to worry about fetching the subject or passing it to the policy evaluation. Additionally, Kilpi can narrow down the type of the subject to reduce type-checking boilerplate.
+Simple example based on modifying the current `request` object.
 
 ```ts
-// Without subject pattern
-const user = await getUserFromMyAuthProvider();
-await Kilpi.authorize(user, "docs:read", doc);
-if (!user) {
-  throw new Error("User not found");
+async function getSubject(ctx?: Request & { cachedSubject?: Subject }) {
+  if (!ctx) return null;
+
+  // Cache hit
+  if (ctx.cachedSubject) return ctx.cachedSubject;
+
+  // Cache miss: Get subject and store it in cache
+  const subject = await getCurrentUser(ctx);
+  ctx.cachedSubject = subject;
+  return subject;
 }
-console.log(user.name);
-
-// With subject pattern (and narrowed down `user` type)
-const user = await Kilpi.authorize("docs:read", doc);
-console.log(user.name);
 ```
 
-While this does make the API design less explicit, it is justified by the fact that in most applications it reduces the complexity and boilerplate of the implementation by a considerable amount.
+Example using hooks and another per-request caching system, such as `React.cache`.
 
-### 2. Create auth-provider agnostic API
+```ts
+// Save to cache
+Kilpi.$hooks.onSubjectResolved(async (event) => {
+  await requestCache.set("subject", event.subject);
+});
 
-By bringing your own `getSubject` function you can use any auth provider you want.
+// Read from cache
+Kilpi.$hooks.onSubjectRequestFromCache(async (event) => {
+  const subject = await requestCache.get("subject", event.subject);
+  if (subject) return { subject };
+});
+```
 
-This would allow you to easily change your auth provider without changing your authorization layer.
+</Collapsible>
+
+<br />
+
+Additionally, a `@kilpi/subject-cache` package is currently in development which would allow you to wrap your application's entry point with an `async_hooks` based API which automatically caches your subject.
